--- a/index.html
+++ b/index.html
@@ -427,6 +427,11 @@ color: #ffffff;
 							PROVIDER IN TAMIL NADU</h5>
 						<p>No Return fare! Why need to pay for one way Taxi, We're the most trusted one way taxi service in TamilNadu.
 							</p>
+						<div class="row">
+								<div class="col-sm-12 text-center">
+									<a href="#book" class="btn btn-primary" ">Book Now</a>
+								</div>
+							</div>
 					</div>
 				</div>
 				<div class="carousel-item">
@@ -435,6 +440,11 @@ color: #ffffff;
 						<h5 style="color: #fff;">Anytime & Anywhere!
 							We've got you.</h5>
 						<p>Hire our taxi for Hassle free Pickup and Drop of your choice.</p>
+									<div class="row">
+							<div class="col-sm-12 text-center">
+								<a href="tel:+919944942223" class="btn btn-primary" ">Call us</a>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="carousel-item">
@@ -442,6 +452,11 @@ color: #ffffff;
 					<div class="carousel-caption d-md-block">
 						<h5 style="color: #fff;">At Affordable rates like never before</h5>
 						<p>We are providing the best service with affordable price unlike anywere else.</p>
+						<div class="row">
+							<div class="col-sm-12 text-center">
+								<a href="#book" class="btn btn-primary" ">Book Now</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
