--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ color: #ffffff;
 							<ul class="contact">
 								<li class="phone"><a href="tel:+919944942223">99449 42223</a></li>
 								<li class="email"><a
-										href="mailto:intercityriders.in@gmail.com">intercityriders.in@gmail.com</a>
+										href="mailto:intercityriders.inn@gmail.com">intercityriders.in@gmail.com</a>
 								</li>
 								<li class="address">No:47 Thirumurugan nagar, Veeriyampalayam road,
 									Kalapatti, Coimbatore 641048.</li>
