--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@ color: #ffffff;
 																<div class="col-sm-12 col-md-6">
 																	<div class="widget">
 																		<h6>About us</h6>
-																		<p>Intercity one way taxi one way car hire
+																		<p> Intercity Riders one way car hire
 																			packages
 																			are designed in such a way, so user could
 																			avail more benefits by just paying one way
@@ -1132,7 +1132,7 @@ color: #ffffff;
 																			car rental deals on every trip. So why to
 																			wait more, hurry up, you are just few step
 																			away to grab this deal. Book the Cab right
-																			now</p>
+																			now </p>
 
 																		<a href="#book" class="btn btn-secondary">Book
 																			Now</a>
