--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ color: #ffffff;
 																	var strText5 = document.getElementById("cars").value;
 																	var strText6 = document.getElementById("time").value;
 																	var strText7 = document.getElementById("Service").value;
-																	var result = 'Booking from intercityonewaytaxi.in' + '%0ACustomer Name:  ' + strText + '%0APhone Number: ' + strText1 + '%0AService: ' + strText7 + '%0APickup Location: ' + strText2 + '%0APickup Time: ' + strText6 + '%0APickup Date: ' + strText3 + '%0ADrop Location: ' + strText4 + '%0ACars: ' + strText5;
+																	var result = 'Booking from intercityriders.in' + '%0ACustomer Name:  ' + strText + '%0APhone Number: ' + strText1 + '%0AService: ' + strText7 + '%0APickup Location: ' + strText2 + '%0APickup Time: ' + strText6 + '%0APickup Date: ' + strText3 + '%0ADrop Location: ' + strText4 + '%0ACars: ' + strText5;
 																	//document.getElementById('spanResult').textContent = result;
 																	var finalMsg = encodeURI(result);
 																	document.getElementById("bookingForm").addEventListener("submit", (e) => {
