--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ color: #ffffff;
 															</a>
 														</div>
 
-														<a href="tel:919944942223" class="float1" target="_blank">
+														<a href="tel:+919944942223" class="float1" target="_blank">
 															<i class="fa fa-phone my-float1"></i>
 														</a>
 
@@ -1036,7 +1036,7 @@ color: #ffffff;
 																			Just click any of the button, You're always
 																			right.
 																		</p>
-																		<a href="tel:919944945023"
+																		<a href="tel:+919944945023"
 																			class="btn btn-secondary">Call Us</a>
 																		<a href="#book" class="btn btn-secondary">Book
 																			Now</a>
