--- a/index.html
+++ b/index.html
@@ -420,6 +420,37 @@ color: #ffffff;
 		</div>
 	</header>
 	<!-- Header end -->
+
+	<style>      
+        .rainbow_bottom{
+            padding: 7px 0px;
+            position: fixed;
+            z-index: 9999;
+            bottom: 0;
+        }
+    </style>
+	
+    <div class="rainbow rainbow_top" style="padding: 8px 0px; margin-top: 10px;" align="center">
+        <td align="center">
+            <strong>
+                <a href="majorroutes" style="color: #fff;font-size: 14px; vertical-align: middle">
+                    <div style="text-align: center; font-size: medium;">&ensp;&ensp; CLICK HERE TO SEE EXCITING
+                        OFFERS</div>
+                </a>
+            </strong>
+        </td>
+    </div>
+
+	<div class="rainbow rainbow_bottom" align="center">
+        <td align="center">
+            <strong>
+                <a href="https://tinyurl.com/intercityriders" style="color: #fff;font-size: 14px; vertical-align: middle">
+                    <div style="text-align: center; font-size: medium;">&ensp;&ensp; CLICK HERE TO DOWNLOAD THE APP&ensp;&ensp;</div>
+                </a>
+            </strong>
+        </td>
+    </div>
+
 	<!-- Content start -->
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators">
